--- a/css/style.css
+++ b/css/style.css
@@ -435,100 +435,280 @@ section li {
 }
 
 /* Responsiv design */
-
-@media (max-width: 1024px) { /* Tablet View - Medium screens */
-    .side-nav {
-        width: 180px;
-        font-size: large;
-        margin: 200px 0 0 15px;
-    }
-    .section-container {
-        margin-left: 10em; 
-        width: 100%; 
-    }
-    header h1 {
-        font-size: xx-large; 
-        margin-left: 2em;
-    }
-    .signup-container, .price-form {
-        flex-direction: column;
-        align-items: center;
-    }
-    .ticket-included, .ticket-price {
-        width: 100%;
-        margin: 0; 
-    }
-}
-
-@media (max-width: 768px) { /* Mobile View - Small screens */
-    /* Nav */
-    .side-nav {
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        left: -100%; /* Hide by default */
-        margin: 0;
-        transition: left 0.3s ease;
-        z-index: 1000;
-        background-color: black;
-    }
-    .side-nav.active {
-        left: 0; 
-    }
-    .menu-toggle {
-        display: block;
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        background-color: black;
-        color: white;
-        padding: 10px;
-        cursor: pointer;
-        z-index: 1001;
-    }
-    /* Header */
+@media (max-width: 768px) { /* for taplet */
+    /* header */
     header { 
-        height: 150px;
-        background-size: cover;
+        padding: 15px;
     }
     header h1 {
         font-size: large;
+        margin: 15px;
+    }
+    /* nav */
+    nav {
+        padding: 0 20px; /* Reduced margin for smaller screens */
+    }
+    nav ul {
+        flex-direction: column; 
+        align-items: center;
+        margin: 30px 0 0 0; /* top, right, bottom, left */
+    }
+    nav ul li {
+        margin: 5px 0;
+    }
+    nav img {
+        width: 45px;
+        height: 45px;
+    }
+    /* Main and Name of menu list */
+    .section-container .title-menu > * {
+        width: 24em;
+        height: 5em;
+        padding: 0.4em;
         margin: 0.5em;
+        border-radius: 1em;
     }
-    /* Main */
-    main { 
-        padding: 10px;
-        flex-direction: column; 
+    .title-name h2 {
+        font-size: 1.2em;
+        padding: 0.8em;
     }
-    .section-container {
-        margin-left: 0; 
-        padding: 0; 
-        width: 100%;
+    .title-menu img {
+        width: 50px;
+        height: 50px;
     }
-    /* Signup */
-    .signup-container, .price-form {
-        flex-direction: column; 
-        width: 100%;
-        margin: 0; 
+     /* Om Konferensen menu */
+     .about-conference {
+        margin: 20px 50px 40px 50px; /* top, right, bottom, left */
+        padding: 15px 20px; 
+        font-size: medium; 
+        line-height: 2.5em;
     }
-    .signup-form, .food-form, .ticket-included, .ticket-price {
-        width: 100%; 
-        margin: 0;
+    .about-conference img {
+        width: 40px;
+        height: 40px;
     }
+    /* Seminarier menu */
     .seminarier-box {
         flex-direction: column; 
+        height: auto;
+        padding: 15px;
+    }
+    .seminarier-box2 {
+        width: 100%; 
+        padding: 0.8em;
+        font-size: large;
+        line-height: 2em;
+        margin-bottom: 15px;
+    }
+    .about-seminars {
+        font-size: large;
+    }
+    /* Anmälan menu */
+    .signup-container {
+        flex-direction: column; 
+        align-items: center;
+    }
+    .signup-form, .food-form {
+        width: 80%; 
+        padding: 10px 15px;
+    }
+    .allergies-text1 img {
+        width: 100px;
+        height: 80px;
+    }
+    textarea {
+        width: 100%;
+        height: 8em;
+    }
+     /* Anmälan & Error message & Checkbox */
+     input:invalid, textarea:invalid {
+        background-color: ivory;
+        border-color: red;
+    }
+    .error-message {
+        display: none;
+        color: red;
+    }
+    input:invalid + .error-message,
+    textarea:invalid + .error-message {
+        display: block;
+    }
+    .signup a {
+        text-decoration: none;
+        color: rgb(70, 70, 182);
+        border: rgb(70, 70, 182) solid 2px;
+        border-radius: 5px;
+        margin: 1em;
+        padding: 1em;
+    }
+    /* Priser för biljetter */
+    .price-form {
+        flex-direction: column; 
+        margin: 0 20px;
+    }
+    .ticket-price, .ticket-buying-container {
+        width: 90%;
+        margin: 10px auto;
+    }
+    .ticket-included {
+        width: 100%;
     }
     /* Contact */
     .contact-container {
-        grid-template-columns: 1fr; /* Single column layout */
-        text-align: center;
+        grid-template-columns: 1fr; /* 1 column for taplet */
+        padding: 10px;
+    }
+    .social-media {
+        padding-left: 0; 
     }
     .contact-betterweb {
-        font-size: large;
+        font-size: large; 
     }
-    /* Ticket */
-    .ticket, .person {
-        width: 100%;
-        margin: 0.5em 0;
+    .person img {
+        width: 120px;
+        height: 120px; 
     }
 }
+
+@media (max-width: 480px) { /* for mobile phone */
+    /* header */
+    header { 
+        padding: 10px;
+    }
+    header h1 {
+        font-size: medium;
+        margin: 10px;
+    }
+    /* nav */
+    nav {
+        padding: 0 10px;
+    }
+    nav ul {
+        margin: 20px 0 0 0; /* top, right, bottom, left */
+    }
+    nav ul li {
+        margin: 3px 0;
+    }
+    nav img {
+        width: 35px;
+        height: 35px;
+    }
+    /* Main and Name of menu list */
+    main {
+        padding: 10px;
+    }
+    .section-container .title-menu > * {
+        width: 18em;
+        height: 4em;
+        padding: 0.3em;
+        margin: 0.5em;
+        border-radius: 0.8em;
+    }
+    .title-name h2 {
+        font-size: 1em;
+        padding: 0.5em;
+    }
+    .title-menu img {
+        width: 40px;
+        height: 40px;
+    }
+     /* Om Konferensen menu */
+     .about-conference {
+        margin: 15px 20px 30px 20px; /* top, right, bottom, left */
+        padding: 10px 15px;
+        font-size: small;
+        line-height: 2em;
+        border-radius: 15px;
+    }
+    .about-conference img {
+        width: 30px;
+        height: 30px;
+    }
+    /* Seminarier menu */
+    .seminarier-box {
+        margin: 10px;
+        padding: 10px;
+    }
+    .seminarier-box2 {
+        width: 100%;
+        padding: 0.5em;
+        font-size: medium;
+        line-height: 1.8em;
+        border-radius: 0.8em;
+    }
+    .about-seminars {
+        font-size: medium;
+    }
+      /* Anmälan menu */
+      .signup-container {
+        margin: 10px;
+        padding: 10px;
+    }
+    .signup-form, .food-form {
+        width: 100%;
+        padding: 5px;
+    }
+    .allergies-text1 img {
+        width: 80px;
+        height: 60px;
+    }
+    textarea {
+        width: 100%;
+        height: 6em;
+    }
+    button {
+        padding: 8px 12px;
+    }
+      /* Anmälan & Error message & Checkbox */
+      .error-message {
+        font-size: x-small; 
+        margin: 0.5em;
+    }
+    .signup a {
+        margin: 0.5em;
+        padding: 0.5em;
+        font-size: small;
+        border-radius: 4px; 
+    }
+     /* Priser för biljetter */
+     .price-form {
+        flex-direction: column;
+        margin: 0 10px;
+    }
+    .ticket-price, .ticket-buying-container {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+    }
+    .ticket {
+        padding: 10px;
+    }
+    input[type="submit"] {
+        padding: 8px;
+        font-size: small; 
+    }
+    .ticket-included {
+        margin: 1em 0;
+        padding: 0.5em;
+    }
+    .ticket-included img {
+        width: 40px;
+        height: 30px;
+    }
+    /* Contact */
+    .contact-container {
+        padding: 5px;
+    }
+    .contact-betterweb {
+        font-size: medium;
+    }
+    .contact-info, .organizer, .social-media {
+        padding: 5px; 
+    }
+    .person img {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+
