--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header h1:hover {
 main {
     padding: 20px;
     display: flex; /* Using flex to manage layout */
-    width: 100%;
+    width: 1800px;
     flex-wrap: wrap; /* Allow flex items to wrap */
     height: auto; /* Change height to auto for responsiveness */
 }
