--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,8 @@ section p {
     margin-top: 0%;
 }
 .section-container .seminarier-box {
-    display: flex;
-    justify-content: space-between;
-    height: 100vh;
+    display: grid;
+    grid-gap: 20px;
 }
 .seminarier-box .seminarier-box1 {
     text-align: center;
