--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ section {
 .section-container .title-menu > * { /* title menu container*/
 /* (>*) Select all direct child elements of the current parent element. */
     margin-top: 0%;
-    width: 32em;
+    width: 100%;
     height: 6em;
     padding: 0.5em;
     margin: 1em;
