--- a/css/style.css
+++ b/css/style.css
@@ -194,32 +194,48 @@ section p {
 .signup-container {
     display: flex;
     justify-content: space-between;
-    margin-right: 5em;
 }
-.signup-form {
+.signup-form { /* Signup-form */
     width: 100%;
-    padding: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .signup-form, .food-form { /* signup & food form */
-    margin: 0.5em;
+    margin: 5px;
     flex-grow: 1; 
-    line-height: 1em; 
+    line-height: 5px; 
 }
 .food-form {
-    width: 30%;
-    padding-left: 3em;
+    width: 100%;
+    padding: 20px;
+    margin: 20px;
+}
+.food-form fieldset {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.food-form form {
+    width: 100%;
+    padding-top: 20px;
+}
+.food-form .submit {
+    width: 50%;
 }
 section .img-food {
     width: 50px; 
     height: 50px;
-    padding: 5px;
 }
 input, textarea, select {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #918c8c;
     border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .allergies-text {
     margin: 0;
@@ -258,10 +274,11 @@ button:hover {
     background-color: #097dac;
 }
 .food-form button {
-    margin: 2em;
+    margin: 20px;
 }
 .signup-container form {
-    line-height: 2em;
+    line-height: 25px;
+    margin-bottom: 20px;
 }
 .allergies-text1 h3 {
     color: red;
@@ -274,6 +291,7 @@ input:invalid, textarea:invalid {
 .error-message {
     display: none;
     color: red;
+
 }
 input:invalid + .error-message,
 textarea:invalid + .error-message {
