--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,11 @@
 /* Header */
 header {
     display: flex;
-    color: white;
     margin: 0%;
     text-align: start;
     flex-grow: 1;
     width: 100%;
     height: 250px;
-    background-image: url(../img/pacman-header.png);
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
 }
 header h1 {
     transition: transform 0.5s ease;
@@ -143,18 +138,28 @@ section {
 }
 
 /* Om Konferensen menu */
-.about-web img {
+.about-web { /* container */
+    max-width: 100%;
+    margin: 20px;
+    padding: 20px; 
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    flex-direction: column; 
+}
+
+.about-web img { 
     width: 50px;
     height: 50px;
 }
-.section-container .about-conference {
-    margin-top: 2em;
-    margin-bottom: 3em;
-    padding: 2em;
+.about-conference {
+    margin: 20px;
+    padding: 30px;
     font-size: large;
-    line-height: 3em;
+    line-height: 40px;
     box-shadow: rgba(243, 168, 5, 0.35) 5px 5px 15px;
-    border-radius: 0.5em;
+    border-radius: 10px;
+    width: 50%;
 } 
 .section-container .about-conference:hover {
     cursor: pointer;
