--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,9 @@
 
 /* Header */
 header {
-    display: flex;
-    margin: 0%;
-    text-align: start;
-    flex-grow: 1;
+    display: flex; 
     width: 100%;
-    height: 250px;
+    font-size: xx-large;
 }
 header h1 {
     transition: transform 0.5s ease;
@@ -53,12 +50,13 @@ section {
 
 /* Side navigation (Left menu) */
 .side-nav { 
-    width: 220px;  
-    font-size: x-large;
+    width: auto;  
+    font-size: large;
     position: fixed; 
     left: 0%;
     top: 0%;  
-    margin: 350px 0 0 25px; /* top-right-bottom-left */
+    margin: 20px;
+    padding: 20px;
 }
 .side-nav ul {
     list-style: none; /* no dot before text */
