--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 /* Header */
 header {
     display: flex; 
+    justify-content: center;
+    align-items: center;
     width: 100%;
     font-size: xx-large;
 }
@@ -33,7 +35,6 @@ main {
 }
 section {
     flex-direction: column;
-    /* padding-top: 1em; */
     display: flex;
     justify-content: start;
     align-items: center;
