Added home button

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,14 @@ main {
     width: 100%;
     flex-wrap: wrap; /* Allow flex items to wrap */
     height: auto; /* Change height to auto for responsiveness */
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
 }
 section {
     flex-direction: column;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     flex: 1;
     padding: 1rem;
@@ -43,6 +46,7 @@ section {
 .section-container {
     flex: 2; /* flex box 2 */
     display: flex;
+    padding-left: 20%;
     flex-direction: column;
     justify-content: space-between; 
     box-sizing: border-box; /* the size doesn't change when padding/border are added */  
@@ -50,7 +54,7 @@ section {
 
 /* Side navigation (Left menu) */
 .side-nav { 
-    width: auto;  
+    width: auto; 
     font-size: large;
     position: fixed; 
     left: 0%;
@@ -90,6 +94,24 @@ section {
 .side-nav a {
     padding: 0;
     margin: 0%;
+}
+
+/* Home button */
+.home-button {
+    background-color: black; 
+    color: white; 
+    padding: 10px; 
+    margin: 20px;
+    font-size: 16px; 
+    text-align: center; 
+    text-decoration: none; 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    transition: background-color 0.3s, transform 0.3s; /* Smooth transition for hover effects */
+}
+.home-button:hover {
+    background-color: red; 
+    transform: scale(1.1); /* Slightly enlarge on hover */
 }
 
 /* Name of menu list */
