--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,6 @@ section .price-form { /* Tickets price & details container */
     align-items: center;
 }
 .ticket-price { /* Tickets container */ 
-    width: 60%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -351,6 +350,10 @@ section .price-form { /* Tickets price & details container */
     margin: 10px;
     padding: 20px;
     box-shadow: rgba(160, 105, 165, 0.719) 0px -50px 36px -28px inset;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .price-ticket, .ticket-included h3 {
     font-weight: bold;
