--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,13 @@ section {
 }
 
 /* Home button */
+.home-button-container {
+    margin: 30px;
+}
 .home-button {
     background-color: black; 
     color: white; 
     padding: 10px; 
-    margin: 20px;
     font-size: 16px; 
     text-align: center; 
     text-decoration: none; 
